# llm-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  api.py  celery_app.py  docker-compose.yml  example.py  example_multi_json.py  pyproject.toml  urls_to_fetch.txt  worker.py
docs/: API_ARTICLE.md  ARTICLES_GUIDE_EN.md  ARTICLES_GUIDE_VI.md  CRON_SETUP.md  RAG_API_TESTING.md  RAG_WORKFLOW.md  README.md  SELECTOR_GUIDE.md  XPATH_FEATURE.md
examples/: xpath_demo.py
fixtures/en/b/: bitcoin.com.json
fixtures/en/c/: coindesk.com.json  coinedition.com.json  cointelegraph.com.json  crypto.news.json  cryptonews.com.json  cryptonews.net.json  cryptoslate.com.json
fixtures/en/t/: theblock.co.json
scripts/: .env.example  batch_create_fixtures.py  create_astradb_collection.py  debug_site_structure.py  dump_schema_org.py  fetch_and_create_fixture.py  integration_test.py  migrate_configs.py  run_scrapers.sh  test_rag_api.py  trigger_scrapes.py  validate_article_fixture.py
src/llm_scraper/: __init__.py  articles.py  cache.py  chunking.py  discovery.py  exceptions.py  presets.py  scraper.py  settings.py  vector_store.py
src/llm_scraper/models/: __init__.py  base.py  converter.py  helper.py  html.py  markdown.py  meta.py  rss.py  schema.py  selector.py  selector_old.py  sitemap.py
src/llm_scraper/parsers/: base.py
src/llm_scraper/parsers/configs/: baoangiang.json
src/llm_scraper/parsers/configs/en/b/: bitcoin.com.json  bitcoinmagazine.com.json
src/llm_scraper/parsers/configs/en/c/: coindesk.com.json  coinedition.com.json  cointelegraph.com.json  crypto.news.json  cryptonews.com.json  cryptonews.net.json  cryptoslate.com.json
src/llm_scraper/parsers/configs/en/t/: theblock.co.json
src/llm_scraper/parsers/configs/vi/b/: baoangiang.com.vn.json  baoangiang.json  baobinhphuoc.com.vn.json  baobinhthuan.com.vn.json  baodanang.com.vn.json  baodautu.vn.json  baogialai.com.vn.json  baohatinh.vn.json  baolongan.vn.json  baonghean.vn.json  baoquangnam.vn.json  baoquangngai.vn.json  baothuathienhue.vn.json  blogtienao.com.json  bongda.com.vn.json  bongda24h.vn.json  bongdaplus.vn.json
src/llm_scraper/parsers/configs/vi/c/: cafebitcoin.org.json  cafebiz.vn.json  cafef.vn.json  cellphones.com.vn.json  coin68.com.json  congngheviet.com.json
src/llm_scraper/parsers/configs/vi/d/: dantri.com.vn.json  danviet.vn.json  didongviet.vn.json  dienmayxanh.com.json
src/llm_scraper/parsers/configs/vi/e/: eva.vn.json
src/llm_scraper/parsers/configs/vi/g/: game8.vn.json  gamek.vn.json  genk.vn.json
src/llm_scraper/parsers/configs/vi/h/: hellobacsi.com.json  hoanghamobile.com.json
src/llm_scraper/parsers/configs/vi/i/: icoviet.com.json  inhat.vn.json
src/llm_scraper/utils/: __init__.py  aliases.py  datetime.py  normalization.py  text.py
src/llm_scraper/vectors/: __init__.py  abc.py  engine.py  schema.py
src/llm_scraper/vectors/dbs/: astradb.py
src/llm_scraper/vectors/embeddings/: gemini.py  openai.py
tests/: README.md  test_articles.py  test_vectors.py  test_vectors_integration.py  test_xpath_selector.py
(+50 files in other folders)
